--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goldbourne Finance - Premier Microfinance Institution in Zimbabwe</title>
     <meta name="description" content="Licensed microfinance institution providing business loans, personal loans, and financial solutions in Zimbabwe. Registered with Reserve Bank of Zimbabwe.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1553729459-efe14ef6055d?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
