--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goldbourne Finance - Premier Microfinance Institution in Zimbabwe</title>
-    <meta name="description" content="Licensed microfinance institution providing business loans, personal loans, and financial solutions in Zimbabwe. Registered with Reserve Bank of Zimbabwe.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1553729459-efe14ef6055d?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Goldbourne Finance - Empowering Financial Growth in Zimbabwe">
+  <meta name="description" content="Goldbourne Finance is a licensed microfinance institution in Zimbabwe, offering accessible financial solutions including short-term, long-term, agricultural, education, housing, and business loans.">
+  <meta name="keywords" content="Goldbourne Finance, microfinance Zimbabwe, short-term loans, long-term loans, agricultural loans, education loans, housing loans, business loans, financial inclusion, Masvingo, Gweru">
+  <meta name="author" content="Goldbourne Finance">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://goldbourne-finance.com">
+  <meta property="og:title" content="Goldbourne Finance - Empowering Financial Growth in Zimbabwe">
+  <meta property="og:description" content="Goldbourne Finance is a licensed microfinance institution in Zimbabwe, offering accessible financial solutions including short-term, long-term, agricultural, education, housing, and business loans.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1553729459-efe14ef6055d?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/jpeg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://goldbourne-finance.com">
+  <meta property="twitter:title" content="Goldbourne Finance - Empowering Financial Growth in Zimbabwe">
+  <meta property="twitter:description" content="Goldbourne Finance is a licensed microfinance institution in Zimbabwe, offering accessible financial solutions including short-term, long-term, agricultural, education, housing, and business loans.">
+  <meta property="twitter:image" content="https://images.unsplash.com/photo-1553729459-efe14ef6055d?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
