--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="keywords" content="Goldbourne Finance, microfinance Zimbabwe, short-term loans, long-term loans, agricultural loans, education loans, housing loans, business loans, financial inclusion, Masvingo, Gweru">
   <meta name="author" content="Goldbourne Finance">
   <meta name="robots" content="index, follow">
+  <title>Goldbourne Finance | Microfinance Solutions in Zimbabwe</title>
+
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
