--- a/index.html
+++ b/index.html
@@ -37,6 +37,29 @@
     
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Goldbourne Finance",
+  "url": "https://goldbourne-finance.com",
+  "logo": "https://goldbourne-finance.com/logo.png",
+  "description": "Goldbourne Finance is a licensed microfinance institution in Zimbabwe offering accessible financial solutions.",
+  "sameAs": [
+    "https://www.facebook.com/share/1B7eYms1K4/"
+  ],
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+263-78-234-6295",
+    "contactType": "Customer Service",
+    "areaServed": "ZW",
+    "availableLanguage": "English"
+  }
+}
+</script>
+
+
 </head>
 <body>
     <!-- Header -->
